--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             fontFamily: {
@@ -42,29 +43,18 @@
       }
     </script>
     <style>
-      body {
-        background-color: #020617; /* slate-950 */
-        color: #f8fafc;
-      }
       /* Custom scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #0f172a;
+        @apply bg-slate-100 dark:bg-slate-900;
       }
       ::-webkit-scrollbar-thumb {
-        background: #334155;
-        border-radius: 4px;
+        @apply bg-slate-300 dark:bg-slate-700 rounded-full;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #475569;
-      }
-      .glass-panel {
-        background: rgba(30, 41, 59, 0.7);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.08);
+        @apply bg-slate-400 dark:bg-slate-600;
       }
     </style>
   <script type="importmap">
@@ -80,7 +70,7 @@
 }
 </script>
 </head>
-  <body>
+  <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-200 transition-colors duration-300 selection:bg-primary/30 selection:text-primary-900 dark:selection:text-white">
     <div id="root"></div>
   </body>
 </html>
