--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
 </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-200 transition-colors duration-300 selection:bg-primary/30 selection:text-primary-900 dark:selection:text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
